Fixed degree, left-aligned text

--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -63,7 +63,7 @@ h1 {
 
 .container_background {
   background: radial-gradient(circle at center bottom, #162b56, #101010 50%);
-  height: 60vh;
+  height: 40vh;
   display: flex;
   justify-content: center;
   align-items: center;
